api-gateway-nwpl-demo/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: hashicups-gateway
spec:
  gatewayClassName: consul
  listeners:
  - protocol: HTTP
    port: 80
    name: http
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: hashicups-route
spec:
  parentRefs:
  - name: hashicups-gateway
  rules:
  - backendRefs:
    - name: frontend
      port: 3000
  - matches:
    - path:
        type: PathPrefix
        value: /api
    backendRefs:
    - name: public-api
      port: 8080
